--- a/src/main/resources/templates/food-detail.html
+++ b/src/main/resources/templates/food-detail.html
@@ -4,7 +4,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-  <title>Cat Info</title>
+  <title>Food Details</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
@@ -13,10 +13,10 @@
 </head>
 <body>
 <div class="container">
-  <h1 style="text-align:center;">Cat Info</h1>
+  <h1 style="text-align:center;">Food Details</h1>
   <div class="card" style="width: 18rem;">
     <div class="card-body">
-      <h5 class="card-title">Cat</h5>
+      <h5 class="card-title">Food</h5>
       <p class="card-text" th:text=" 'ID: '+ ${food.id}" />
       <p class="card-text" th:text="'Name: '+${food.plateName}" />
       <p class="card-text" th:text="'CookTime: '+${food.cookTime}" />
@@ -25,7 +25,7 @@
       <a th:href="@{/food/delete/id={id}(id=${food.id})}" class="btn btn-primary">Delete</a>
     </div>
   </div>
-  <a href="/food/all" class="btn btn-primary" >Cat List</a>
+  <a href="/food/all" class="btn btn-primary" >Food List</a>
 </div>
 </body>
 </html>
