--- a/src/main/resources/templates/food-list.html
+++ b/src/main/resources/templates/food-list.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cats</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+
 </head>
 <body>
+<div class="container">
 
+    <h1 style="text-align:center;">food List</h1>
+
+    <div style="align-content: center;">
+        <p class="my-5">
+            <a href="/templates/food-new.html" class="btn btn-primary" >Add food</a>
+        </p>
+        <form th:action="@{/food/search}">
+            Filter: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
+            &nbsp;
+            <input type="submit" value="Search" />
+            &nbsp;
+            <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
+        </form>
+        <br>
+        <table class="table table-bordered">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>Plate Name</th>
+                <th>Cook Time</th>
+                <th>Price</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="cat : ${foodList}">
+                <td> <a th:href="@{/food/id={id}(id=${food.id})}" th:text=" ${food.id}" > </a></td>
+                <td th:text=" ${food.plateName}"></td>
+                <td th:text=" ${food.cookTime}"></td>
+                <td th:text=" ${food.Price}"></td>
+            </tr>
+
+            </tbody>
+        </table>
+    </div>
+
+
+</div>
 </body>
+<script type="text/javascript">
+    function clearSearch() {
+        window.location = "[[@{/food/all}]]";
+    }
+</script>
 </html>
