--- a/src/main/resources/templates/food/food-edit.html
+++ b/src/main/resources/templates/food/food-edit.html
@@ -4,7 +4,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-  <title>Update Product</title>
+  <title>Edit Food</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="container my-5">
-  <h3> Enter Product Info</h3>
+  <h3 style = "font-family: 'Comic Sans MS'"> Enter Food Info</h3>
   <div class="card">
     <div class="card-body">
       <div class="col-md-10">
@@ -23,19 +23,19 @@
           <table border="0" cellpadding="10">
             <tr>
               <td>ID:</td>
-              <td><input type="text" th:field="*{id}" value="${product.id}" readonly /></td>
+              <td><input type="text" th:field="*{id}" value="${food.id}" readonly /></td>
             </tr>
             <tr>
               <td>Name:</td>
-              <td><input type="text" th:field="*{plateName}" required value="${product.name}"/></td>
+              <td><input type="text" th:field="*{name}" required value="${food.name}"/></td>
             </tr>
             <tr>
-              <td>Type:</td>
-              <td><input type="text" th:field="*{cookTime}" required value="${product.type}"/></td>
+              <td>Cook Time:</td>
+              <td><input type="text" th:field="*{cookTime}" required value="${food.cookTime}"/></td>
             </tr>
             <tr>
               <td>Price</td>
-              <td><input type="number" min="0" step="0.01" th:field="*{price}" required value="${product.price}"/></td>
+              <td><input type="number" min="0" step="0.01" th:field="*{price}" required value="${food.price}"/></td>
             </tr>
             <tr>
               <td colspan="2"><button type="submit">Save</button> </td>
