--- a/src/main/resources/templates/food/food-list.html
+++ b/src/main/resources/templates/food/food-list.html
@@ -4,7 +4,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <title>Cats</title>
+    <title>Food list</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
@@ -14,11 +14,11 @@
 <body>
 <div class="container">
 
-    <h1 style="text-align:center;">food List</h1>
+    <h1 style="text-align:center; font-family: 'Comic Sans MS'">food List</h1>
 
     <div style="align-content: center;">
         <p class="my-5">
-            <a href="/templates/food-new.html" class="btn btn-primary" >Add food</a>
+            <a href="/food/new-food" class="btn btn-primary" >Add food</a>
         </p>
         <form th:action="@{/food/search}">
             Filter: <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
@@ -33,16 +33,16 @@
             <tr>
                 <th>ID</th>
                 <th>Plate Name</th>
-                <th>Cook Time</th>
+                <th>Cook Time (minutes)</th>
                 <th>Price</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="cat : ${foodList}">
+            <tr th:each="food : ${foodList}">
                 <td> <a th:href="@{/food/id={id}(id=${food.id})}" th:text=" ${food.id}" > </a></td>
-                <td th:text=" ${food.plateName}"></td>
+                <td th:text=" ${food.name}"></td>
                 <td th:text=" ${food.cookTime}"></td>
-                <td th:text=" ${food.Price}"></td>
+                <td th:text=" ${food.price}"></td>
             </tr>
 
             </tbody>
